Run npm install again to avoid things breaking - Route to get to the form to add a friend added   - at some point this will be cool and fancy and built into the side menu, but for now its just going to have its own fall-back route - added friends card partial view.   - looking back on this, I probably should have included the card-wrapper in it. - Styles applied to make magic alignments happen on the "add" page

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -77,8 +77,16 @@ main.mdl-layout__content
       flex-direction: column
       align-items: center
       margin: 1em
-    .dashboard
-
+    &.dashboard
+      width: 100%
+      display: flex
+      .add
+        margin-left: auto
+        margin-right: auto
+    .friends
+      flex: 1 1 75%
+    .stream
+      flex: 1 1 25%
 footer
   .mdl-mini-footer__right-section
     button.mdl-mini-footer__social-btn
